[package]
name = "near-prop"
version = "0.1.0"
edition = "2021"

[features]
default = ["regex", "use_logging"]
use_logging = ["log", "env_logger"]
regex = ["env_logger/regex"]

[dependencies]
async-recursion = "1.0.0"
workspaces = { version = "0.3.1", features = ["unstable"] }
async-trait = "0.1.56"
futures = "0.3.21"
quickcheck = "1.0"
tokio = { version = "1.18", features = ["sync", "rt", "macros"] }
env_logger = { version = "0.8.2", default-features = false, optional = true }
log = { version = "0.4", optional = true }
