[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
near-sdk = "4.0"

[dev-dependencies]
near-prop = { path = "../../near-prop" }
tokio = { version = "1.18", features = ["full"] }
anyhow = "1.0"
workspaces = { version = "0.3.1", features = ["unstable"] }
